tagbox: fixed remove button border shifting

--- a/less/tagbox.less
+++ b/less/tagbox.less
@@ -41,6 +41,7 @@
     background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAJCAYAAADgkQYQAAAAUklEQVQYV2NkgAAfBgaGLVA2MgUWZ4Qq2AyVAfFh4D+U4QsThAmAxE0YGBjOIClmxKYT2TqwPLIiYzQTQCaeRVeEbCXMNBSTCLoJ5E2ifIc3nADKqBCiWqOKtgAAAABJRU5ErkJggg==);
     background-position: center;
     background-repeat: no-repeat;
+    border: 1px solid transparent;
     border-radius: 3px;
     margin: 2px;
 
@@ -51,7 +52,7 @@
 
     &:hover {
       background-color: rgba(0,0,0,.06);
-      border: 1px solid @tr-default-tag-border-color;
+      border-color: @tr-default-tag-border-color;
     }
   }
 }
